--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -17,6 +17,7 @@
 @import "graybike/base/base";
 @import "graybike/base/utilities";
 @import "graybike/base/nav";
+@import "graybike/base/footer";
 
 // Components
 @import "graybike/components/buttons";
