remove article tag

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -16,6 +16,7 @@
     = javascript_include_tag  "all"
   %body{:class => page_classes}
     = yield
+    = partial "partials/footer"
 
     %script{ src: "https://code.jquery.com/jquery-1.11.3.min.js" }
     %script{ src: "//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.0/jquery.scrollTo.min.js" }
