--- a/source/stylesheets/graybike/pages/_landing.scss
+++ b/source/stylesheets/graybike/pages/_landing.scss
@@ -1,5 +1,7 @@
-article.landing {
+.landing {
   height: 100%;
+  overflow: auto;
+  position: relative;
   .hero {
     width: 100%;
     @include retina-image('/images/landing-bg', 397px 322px);
