--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -1,24 +1,16 @@
 %footer
   %ul.text-center
     %li
-      %a{:href => "mailto:hello@graybike.co"} hello@graybike.co
+      %p
+        %a{:href => "mailto:hello@graybike.co"} hello@graybike.co
+    %li.divider
+      %p &#xb7;  
     %li
-      |  
+      %p 415.326.3397
+    %li.divider
+      %p &#xb7;
     %li
-      %a{:href => "tel:4153263397"} +1 415 326 3397
-  / .footer-secondary-links
-  /   %ul
-  /     %li
-  /       %a{:href => "javascript:void(0)"} Terms and Conditions
-  /     %li
-  /       %a{:href => "javascript:void(0)"} Privacy Policy
-  /   %ul.footer-social
-  /     %li
-  /       %a{:href => "javascript:void(0)"}
-  /         %img{:alt => "Facebook", :src => "https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/facebook-logo-circle.png"}
-  /     %li
-  /       %a{:href => "javascript:void(0)"}
-  /         %img{:alt => "Twitter", :src => "https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png"}
-  /     %li
-  /       %a{:href => "javascript:void(0)"}
-  /         %img{:alt => "YouTube", :src => "https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png"}
+      %p San Francisco, CA
+  - if data.features.colophon
+    .colophon.text-center
+      %a{href:"/colophon"} about this site
