--- a/source/stylesheets/graybike/base/_footer.scss
+++ b/source/stylesheets/graybike/base/_footer.scss
@@ -1,12 +1,30 @@
 footer {
   background: darken($blue-d2,20%);
-  color: white;
+  color: $blue-b2;
   padding: padding-blocks(2) padding-blocks(1);
+  margin-top: padding-blocks(2);
   ul {
     list-style: none;
+    padding-left: 0;
+    display: block;
     li {
       display: inline-block;
       margin: auto 1em;
+      @include media($mobile) {
+        display: block;
+        margin-bottom: padding-blocks(1);
+        &.divider {
+          display: none;
+        }
+      }
+      p {
+        margin-bottom: 0;
+      }
     }
+  }
+  .colophon {
+    display: block;
+    margin: padding-blocks(1) auto 0 auto;
+    font-size: 0.75em;
   }
 }
