wording and add in services section

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -38,13 +38,13 @@
       .visualize
         %h3 Visualize
         %p
-          I use design, research and engineering to analyze data and tell stories.
+          I use design, research and engineering to create data visualizations and tell stories.
     
     %section.about
       %p
         I believe
         %span communication and collaboration
-        are paramount to the success of any project we work on. I work best with clients that value these same principles, and trust me to provide valuable critique throughout the process. Click on one of my services above to find out more.
+        are paramount to the success of any project we work on. I work best with small organizations with small teams that value these same principles, and trust me to provide valuable critique throughout the process. While I generally work alone, I sometimes bring on additional talent as needed on a per-project basis.
 
     = partial "partials/cta"
 
