--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -44,7 +44,7 @@
       %p
         I believe
         %span communication and collaboration
-        are paramount to the success of any project we work on. I work best with small organizations with small teams that value these same principles, and trust me to provide valuable critique throughout the process. While I generally work alone, I sometimes bring on additional talent as needed on a per-project basis.
+        are paramount to the success of any project we work on. I work best with clients that value these same principles, and trust me to provide valuable critique throughout the process. While I generally work alone, I sometimes bring on additional talent as needed on a per-project basis.
 
     = partial "partials/cta"
 
