--- a/source/partials/_cta.html.haml
+++ b/source/partials/_cta.html.haml
@@ -1,5 +1,5 @@
 %section.cta
-  %p.text-center Interested in working together or want to find out more?
+  %p.text-center Interested in working together?
   .cta__contact.text-center
     %a.cta__button{href:'mailto:hello@graybike.co', alt: "Get in touch"}
       .cta__cta-text GET IN TOUCH
