adjust tagline & description

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -17,38 +17,18 @@
   
   %section.services
     %h3#services
-      I use design and engineering to explore data, solve problems, and tell stories. Feel free to
+      I use data, design, and technology to solve problems for businesses and non-profits. If you'd like to chat, feel free to
       %a{href: 'mailto:hello@graybike.co'} send me an email
-      if you'd like to work with me, find out more, or just chat. Or, call me directly at
+      or call me directly at
       %a{href: 'tel:4153263397'} 415-326-3397.
   %section
     %hr
 
   %section.work
-    %h2.text-center#work Here is some of my data viz work.
+    %h2.text-center#work Here is some of my work.
 
-  %section
-    .company-example.no-margin-bottom
-      .company-example__description
-        %h4 Interactive Protein Pathways
-        %p.date.company-example__service-used STRATEGY & DATA VISUALIZATION
-        %p
-          Cell Signal Technology wanted to build a visualization that provided information on their product catalog, as well as inform the viewer about protein pathways available in the cell. They hired Captains of Industry, who brought me on to build the data viz. I worked closely with design througout and built the entire visualization.
-          / %a.read-more{href:"#"} Read More &rsaquo;
-          %p
-            %a.read-more{href:"http://learn.cellsignal.com/interactive-signaling-pathway-demo", target: "_blank"} VISIT SITE &rsaquo;
-          
-      .company-example__image.omega
-        %a{href:"http://learn.cellsignal.com/interactive-signaling-pathway-demo", target: "_blank"}
-          = image_tag "work/ipv-pathways.png", alt: "Visualizing Protein Pathways"
-      
-      .company-example__testimony
-        %blockquote.no-margin-bottom
-          %p We came to Pavan with an complex, abstract problem: we needed a team member to help us develop an interactive data visualization to represent complex biology concepts while highlighting our client's product offering. Pavan's versatile knowledge surrounding data visualization was invaluable in creating a scientifically accurate visualization that was easy to understand and looked great. The visualization gave excellent exposure to our client's product line. Pavan is a great engineer, thinker, and communicator -- we'd hire him again in a heartbeat!
-          %cite Ted Dillon, Managing Producer at Captains of Industry
-
-  %section.additional-work
-    %h3.text-center Sometimes I do engineering consulting, too.
+  / %section.additional-work
+  /   %h3.text-center Sometimes I do engineering consulting, too.
 
 
   %section
@@ -71,6 +51,28 @@
         %blockquote
           %p Pavan has been our go-to guy to help with our engineering efforts at drinksoma.com. We came to him for help with a huge redesign of our e-commerce website. He was able to put a new face on our website and vastly improve the capabilities of our platform -- leading to many more sales and happier customers! He has a great ability to take our business problems and solve them with his engineering expertise. We look forward to continuing to work with him!
           %cite Michael Del Ponte, Founder & CEO at Soma Water
+
+
+  %section
+    .company-example
+      .company-example__description
+        %h4 Interactive Protein Pathways
+        %p.date.company-example__service-used STRATEGY & DATA VISUALIZATION
+        %p
+          Cell Signal Technology wanted to build a visualization that provided information on their product catalog, as well as inform the viewer about protein pathways available in the cell. They hired Captains of Industry, who brought me on to build the data viz. I worked closely with design througout and built the entire visualization.
+          / %a.read-more{href:"#"} Read More &rsaquo;
+          %p
+            %a.read-more{href:"http://learn.cellsignal.com/interactive-signaling-pathway-demo", target: "_blank"} VISIT SITE &rsaquo;
+          
+      .company-example__image.omega
+        %a{href:"http://learn.cellsignal.com/interactive-signaling-pathway-demo", target: "_blank"}
+          = image_tag "work/ipv-pathways.png", alt: "Visualizing Protein Pathways"
+      
+      .company-example__testimony
+        %blockquote.no-margin-bottom
+          %p We came to Pavan with an complex, abstract problem: we needed a team member to help us develop an interactive data visualization to represent complex biology concepts while highlighting our client's product offering. Pavan's versatile knowledge surrounding data visualization was invaluable in creating a scientifically accurate visualization that was easy to understand and looked great. The visualization gave excellent exposure to our client's product line. Pavan is a great engineer, thinker, and communicator -- we'd hire him again in a heartbeat!
+          %cite Ted Dillon, Managing Producer at Captains of Industry
+
 
   %section
     .company-example.no-margin-bottom
