--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -1,6 +1,6 @@
 // Font families
 $sans-serif: 'Source Sans Pro', sans-serif;
-$serif: 'Roboto Slab', serif;
+$serif: 'adelle', serif;
 
 // Typography
 $base-font-family: $sans-serif;
