--- a/source/stylesheets/graybike/base/_nav.scss
+++ b/source/stylesheets/graybike/base/_nav.scss
@@ -39,10 +39,10 @@ header {
     font-family: $sans-serif;
     color: $blue-d2;
     font-weight: 600;
-    &:hover {
-      color: $blue-b2;
-      cursor: pointer;
-    }
+    // &:hover {
+    //   color: $blue-b2;
+    //   cursor: pointer;
+    // }
     // &::before {
     //   // content: '';
     //   display: inline-block;
