--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -11,9 +11,14 @@
 
     / Use title if it's in the page YAML frontmatter
     %title= current_page.data.title || "#{current_page.data.title ? current_page.data.title + "| " : ''}GRAY BIKE - Creative Technology"
-    %link{href:'http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700|Source+Sans+Pro:200,300,400,600', rel:'stylesheet', type:'text/css'}
+    %link{href:'http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700', rel:'stylesheet', type:'text/css'}
     = stylesheet_link_tag "all"
     = javascript_include_tag  "all"
+
+    %script{src:"https://use.typekit.net/wqk5aml.js"}
+    %script
+      try{Typekit.load({ async: true });}catch(e){}
+
   %body{:class => page_classes}
     = yield
     = partial "partials/footer"
