--- a/source/partials/_nav.html.haml
+++ b/source/partials/_nav.html.haml
@@ -7,12 +7,12 @@
           %span.dg GRAY
   %nav
 
-    %a{href:"#services"}
+    %a{href:"#about"}
       %span About
-    / %a{href:"#work"}
-    /   %span Work
+    %a{href:"#work"}
+      %span Work
     - if data.features.blog
       %a{href:"/words"}
         %span Words
-    %a.contact{href:'mailto:hello@graybike.co'}
-      %span Contact
+    / %a.contact{href:'mailto:hello@graybike.co'}
+    /   %span Contact
