--- a/source/stylesheets/graybike/base/_typography.scss
+++ b/source/stylesheets/graybike/base/_typography.scss
@@ -1,3 +1,10 @@
+.wf-loading * {
+  visibility: hidden;
+}
+
+.wf-active * {
+  visibility: visible;
+}
 .type-system-slab {
   $base-border-radius: 3px !default;
   $base-line-height: 1.5em !default;
@@ -29,6 +36,11 @@
   p {
     color: $base-font-color;
     line-height: $base-line-height;
+  }
+
+  strong {
+    font-style: normal;
+    font-weight: 600;
   }
 
   .type {
@@ -114,7 +126,7 @@
     display: inline-block;
     font-family: $serif;
     font-size: 0.8em;
-    font-weight: 700;
+    font-weight: 600;
     margin-left: 0.2em;
     position: relative;
     text-transform: uppercase;
