update more text

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -34,8 +34,8 @@
         .services
           %p.subheading What I can do for you
           %ul 
-            %li Estimate/plan your next project
-            %li Design & build a product
+            %li Estimate & plan your next project
+            %li Design & build a digital product
             %li Create a data visualization
         .clients
           %p.subheading SOME FOLKS I'VE WORKED WITH
