credit where credit is due

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -60,7 +60,11 @@
         %p 
           I led the engineering efforts for a massive redesign for Soma's e-commerce website. Working closely with design and marketing,
           %span.emphasize we were able to increase sales by 40%
-          in the first 3 months after launch.
+          in the first 3 months after launch. I worked closely with 
+          %a{href:"http://lian.gs/", target: "_blank"} Liang Shi
+          at Soma and
+          %a{href:"http://pbj.me/", target: "_blank"} Patrick Johnson
+          to bring this project to life.
           / %a.read-more{href:"#"} Read More &rsaquo;
         %p
           %a.read-more{href:"https://www.drinksoma.com/", target: "_blank"} VISIT SITE &rsaquo;
