--- a/source/partials/_nav.html.haml
+++ b/source/partials/_nav.html.haml
@@ -7,9 +7,13 @@
           %span.dg GRAY
   %nav
 
-    %a{href:"#about"}
-      %span About
-    %a{href:"#work"}
+    - if defined?(alt)
+      %a{href:"#about"}
+        %span About
+    - else 
+      %a{href:"/#about"}
+        %span About
+    %a{href:"/work"}
       %span Work
     - if data.features.blog
       %a{href:"/words"}
