--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -1,6 +1,7 @@
 body {
   color: $base-font-color;
   font-family: $base-font-family;
+  font-weight: $base-font-weight;
   font-feature-settings: "kern", "liga", "pnum";
   font-size: $base-font-size;
   line-height: $base-line-height;
