--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -3,11 +3,12 @@ $sans-serif: 'Source Sans Pro', sans-serif;
 $serif: 'adelle', serif;
 
 // Typography
-$base-font-family: $sans-serif;
-$heading-font-family: 'Roboto Slab', $base-font-family;
+$base-font-family: $serif;
+$heading-font-family: $base-font-family;
 
 // Font Sizes
 $base-font-size: 1em;
+$base-font-weight: 300;
 
 // Line height
 $base-line-height: 1.5;
