--- a/source/stylesheets/graybike/base/_nav.scss
+++ b/source/stylesheets/graybike/base/_nav.scss
@@ -4,6 +4,7 @@ header {
   letter-spacing: 1px;
   height: $navbar-height;
   padding: 1em 2.5%;
+  font-family: $sans-serif;
 
   // http://code.jelmerdemaat.nl/2012/perfectly-justified-css-grid-technique-using-inline-block/
   &::after {
