--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -48,7 +48,7 @@
             %li Hummings
             %li Command Line Interactive
 
-  %section.cta
-    .cta__contact.text-center
+  %section
+    .text-center
       %a.cta__button{href:'/work', alt: "Work"}
         .cta__cta-text CHECK OUT MY WORK
